--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h3 class="a1">The developers are: Henkka and Kasper</h3> 
                 <h3 class="a1">We make videos about our game project <br>called Pixel Blocks</h3> 
                 <h3 class="a1">And the version is 1.0</h3> 
-                <h3 class="a1">And remeber to like our videos</h3> 
+                <h3 class="a1">And remember to like our videos</h3> 
                 <button class="n1"><a class="l1" href="https://youtube.com/@PixelBlocks-nc2uw?si=0zEAdTS1hUt8-qpk">Check our YouTube channel</a></button> 
             </article>
         </div>
